--- a/res/ui/gtk4/window.css
+++ b/res/ui/gtk4/window.css
@@ -299,7 +299,7 @@ scrollbar trough {
 
 scrollbar slider {
     background-color: @ripple;
-    border: none;
+    /*border: none;*/
     /*border-radius: 0;*/
 }
 
